[gd_scene load_steps=3 format=3 uid="uid://bscn0b14nkvy3"]

[ext_resource type="Script" path="res://scripts/timer.gd" id="1"]

[sub_resource type="LabelSettings" id="LabelSettings_ltf2a"]
font_size = 24

[node name="Timer" type="HBoxContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 31.0
grow_horizontal = 2
script = ExtResource("1")

[node name="Start Pause" type="Button" parent="."]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_vertical = 8
focus_mode = 0
text = "Start"

[node name="Current Time" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1
text = "00:00:00.000"
label_settings = SubResource("LabelSettings_ltf2a")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Reset" type="Button" parent="."]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_vertical = 8
tooltip_text = "Restarts the timer to 0.

If you want to clear the board, click on Clear button below the board."
focus_mode = 0
text = "Restart"

[connection signal="pressed" from="Start Pause" to="." method="_on_start_pause_pressed"]
[connection signal="gui_input" from="Current Time" to="." method="_on_current_time_gui_input"]
[connection signal="pressed" from="Reset" to="." method="_on_reset_pressed"]
